--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Include stylesheet -->
-  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-  <!-- Include the Quill library -->
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-  </head>
-
-<!-- Create the editor container -->
-<div id="editor">
-  <h1>Hello World</h1>
-  <p>Hello World!</p>
-  <p>Some initial  text</p>
-  <p><br></p>
-</div>
-
-
-
-<!-- Initialize Quill editor -->
-<script>
-  var quill = new Quill('#editor', {
-    theme: 'snow'
-  });
-</script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quire - Paperclip</title>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="main">
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+        <div class="saved-notes-div">
+            <ul class="saved-notes-list">
+                <li></li>
+            </ul>
+        </div>
+        <div class="toolbar-and-editor-container">
+            <div id="editor">
+                <h1>Hello World!</h1>
+            </div>
+        </div>
+    </main>
+<script src="index.js"></script>
+</body>
 </html>
