added and linked browser reset (noemalize and meyerweb)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Quire - Paperclip</title>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
