--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <main class="main">
         <nav class="navbar">
             <ul class="nav-list">
+                <li id="logo"></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </nav>
         <div class="saved-notes-div">
