finished responsive navbar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <main class="main">
         <nav class="navbar">
+            <div class='logo'>Q</div>
             <ul class="nav-list">
-                <li class='logo'>Q</li>
+                
                 <li class="nav-icon">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="svg-inline--fa fa-search fa-w-16" role="img" viewBox="0 0 512 512">
                         <title>Search icon</title>
