organized css, styled info page, added meta description

--- a/intro.html
+++ b/intro.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Quire helps you capture ideeas and find them fast.
+        It is a browser based program that let's you save notes directly from your computer or mobile device.">
     <title>Quire - Paperclip</title>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
@@ -39,14 +42,13 @@
         </nav>
         <section class="intro">
             <h1>Welcome to Quire</h1>
-            <p>Quire helps you capture ideeas and find them fast</p>
-            <p>It is a browser based program that let's you save notes directly from your computer or mobile device.</p>
-            <h2>WORK ANYWHERE</h2>
-            <p>Keep important info handy by syncing your notes to all your devices.</p>
-            <h2>YOUR NOTES, YOUR WAY</h2>
+            <p>Quire helps you capture ideeas and find them fast. <br>It is a browser based program that let's you save notes directly from your computer or mobile device.</p>
+            <h2>Stay organized</h2>
+            <p>Star your notes to find them quickly.</p>
+            <h2>Your notes, your way</h2>
             <p>Express yourself with formatting tools that help you write how you think.</p>
-            <h2>FIND THINGS FAST</h2>
-            <p>Get what you need, when you need it. Search gives you results as you type.</p>
+            <h2>Find things fast</h2>
+            <p>Get what you need, when you need it. </p>
         </section>
     </main>
 <script src="index.js"></script>
