added and styled link from intro to main

--- a/intro.html
+++ b/intro.html
@@ -42,7 +42,7 @@
         </nav>
         <section class="intro">
             <h1>Welcome to Quire</h1>
-            <p>Quire helps you capture ideeas and find them fast. <br>It is a browser based program that let's you save notes directly from your computer or mobile device.</p>
+            <p>Quire helps you capture ideeas and find them fast. <br>It is a browser based program that let's you save notes directly from your computer or mobile. <a href="index.html">Get started</a></p>
             <h2>Stay organized</h2>
             <p>Star your notes to find them quickly.</p>
             <h2>Your notes, your way</h2>
