--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="redirectNewUser()">
     <main class="main">
         <nav class="navbar">
             <div class='logo'>Q</div>
