Added a way of creating new notes, hiding the editor and input field as well as fixed issue with italic not working

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="redirectNewUser()">
+    
     <main class="main">
         <nav class="navbar">
             <div class='logo'>Q</div>
@@ -42,11 +43,17 @@
         </nav>
         <div class="saved-notes-div">
             <ul class="saved-notes-list">
+                <button class="new-note-button">Create new note</button>
             </ul>
         </div>
-        <div class="toolbar-and-editor-container">
+        <div class="titel-input-container hidden">
+            <div id="title-form">
+                <input type="text" id="input-title" name="input-title" required placeholder="Note title...">
+                <button id="submit-title-button" onclick="submitTitle()">Add Title</button>
+            </div>
+        </div>
+        <div class="toolbar-and-editor-container hidden ">
             <div id="editor">
-                <h1>Hello World!</h1>
             </div>
         </div>
     </main>
