create new notes, save to local storage and display on load yeeey

--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
       </nav>
 
       <div class="saved-notes-div">
+        <button class="new-note-button">Create new note</button>
         <ul class="saved-notes-list">
-          <!-- <button class="new-note-button">Create new note</button> -->
+         
         </ul>
       </div>
 
@@ -123,7 +124,7 @@
         </div>
       </div> -->
 
-      <div class="toolbar-and-editor-container">
+      <div class="toolbar-and-editor-container hidden">
         <div id="editor">
             <h1>Please add a title here</h1>
         </div>
