fixed scrolling behaviour on mobile and started styling create note button

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       <div class="toolbar-and-editor-container hidden">
         <div id="editor">
             <h1>Please add a title here</h1>
+            <p>Here is where you can write your cool note text</p>
         </div>
         <div>
             <button class="save-note-btn">save</button>
