--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </nav>
 
       <div class="saved-notes-div">
-        <button class="new-note-button">Create new note</button>
+        <button class="new-note-button dark-blue-btn">Create new note</button>
         <ul class="saved-notes-list">
          
         </ul>
@@ -122,9 +122,7 @@
             <h1>Please add a title here</h1>
             <p>Here is where you can write your cool note text</p>
         </div>
-        <div>
-            <button class="save-note-btn">save</button>
-        </div>
+            <button class="save-note-btn dark-blue-btn">Save</button>
       </div>
 
     </main>
