--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="https://kit.fontawesome.com/94d4f6b5a1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -131,6 +132,7 @@
             <p>Here is where you can write your cool note text</p>
         </div>
             <button class="save-note-btn dark-blue-btn">Save</button>
+            <button class="printBtn" onclick="printContent()"><i class="fas fa-print fa-2x"></i></button>
       </div>
 
     </main>
