styled and aligned print and save buttons

--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@
             <h1>Please add a title here</h1>
             <p>Here is where you can write your cool note text</p>
         </div>
+        <div class="bottom-toolbar">
             <button class="save-note-btn dark-blue-btn">Save</button>
-            <button class="printBtn" onclick="printContent()"><i class="fas fa-print fa-2x"></i></button>
+            <button class="printBtn dark-blue-btn" onclick="printContent()"><i class="fas fa-print"></i></button>
+        </div>
       </div>
 
     </main>
