added sections instead of divs that grouped similar content together

--- a/index.html
+++ b/index.html
@@ -119,23 +119,24 @@
         </ul>
       </nav>
 
-      <div class="saved-notes-div">
+      <section class="saved-notes-div">
         <button class="new-note-button dark-blue-btn">Create new note</button>
         <ul class="saved-notes-list">
          
         </ul>
-      </div>
+      </section>
       
-      <div class="toolbar-and-editor-container hidden">
+      <section class="toolbar-and-editor-container hidden">
+
         <div id="editor">
             <h1>Please add a title here</h1>
             <p>Here is where you can write your cool note text</p>
         </div>
-        <div class="bottom-toolbar">
+        <section class="bottom-toolbar">
             <button class="save-note-btn dark-blue-btn">Save</button>
             <button class="printBtn dark-blue-btn" onclick="printContent()"><i class="fas fa-print"></i></button>
-        </div>
-      </div>
+        </section>
+      </section>
 
     </main>
     <script src="index.js"></script>
