created separate functions for closing and opening the editor

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </section>
       
       <section class="toolbar-and-editor-container hidden">
-
+        <div class="close-btn"><button>&times;</button></div>
         <div id="editor">
             <h1>Please add a title here</h1>
             <p>Here is where you can write your cool note text</p>
