Added some font template buttons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Quire helps you capture ideeas and find them fast.
+      content="Quire helps you capture ideas and find them fast.
         It is a browser based program that let's you save notes directly from your computer or mobile device."
     />
     <title>Quire - Paperclip - Note editing tool</title>
@@ -133,6 +133,9 @@
             <p>Here is where you can write your cool note text</p>
         </div>
         <section class="bottom-toolbar">
+            <button id="playfair-display-btn" class="dark-blue-btn">Playfair Display</button>
+            <button id="roboto-btn" class="dark-blue-btn">Roboto</button>
+            <button id="noto-btn" class="dark-blue-btn">Noto Serif</button>
             <button class="save-note-btn dark-blue-btn">Save</button>
             <button class="printBtn dark-blue-btn" onclick="printContent()"><i class="fas fa-print"></i></button>
         </section>
