--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </nav>
 
       <section class="saved-notes-div">
-        <button class="new-note-button dark-blue-btn">Create new note</button>
+        <button class="new-note-button">Create new note</button>
         <ul class="saved-notes-list">
          
         </ul>
