--- a/index.html
+++ b/index.html
@@ -76,8 +76,17 @@
             </svg>
           </button>
         </li>  
+        <li class="nav-icon">
+          <select class="nav-button" id="theme">
+                  <option value="auto">Auto</option>
+                  <option value="light">Light</option>
+                  <option value="dark">Red</option>
+              <title>Color-theme</title>
+          </select>
+        </li>
       </ul>
     </nav>
+
 
       <section class="saved-notes-div">
         <button class="new-note-button dark-blue-btn">Create new note</button>
