--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="https://kit.fontawesome.com/94d4f6b5a1.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="theme.css">
 </head>
 
 <body onload="redirectNewUser()">
@@ -79,8 +80,9 @@
         <li class="nav-icon">
           <select class="nav-button" id="theme">
                   <option value="auto">Auto</option>
-                  <option value="light">Light</option>
-                  <option value="dark">Red</option>
+                  <option value="green">Green</option>
+                  <option value="red">Red</option>
+                  <option value="rainbow">Rainbow</option>
               <title>Color-theme</title>
           </select>
         </li>
