created delete all button and functionality

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
           <ul class="saved-notes-list">
           
           </ul>
+          <button class="clear-trash-bin hidden">Delete all</button>
       </section>
       
       <section class="toolbar-and-editor-container hidden">
