--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
         <button class="ql-list" value="bullet"></button>
         <button class="ql-link"></button>
         <button class="ql-image"></button>
+        <select class="ql-style">
+          <option value="Playfair"></option>
+          <option value="Roboto"></option>
+          <option value="Noto"></option>
+        </select>
         <button id="playfair-display-btn">Playfair Display</button>
         <button id="roboto-btn">Roboto</button>
         <button id="noto-btn">Noto Serif</button>
