worked on dropdown

--- a/index.html
+++ b/index.html
@@ -106,9 +106,15 @@
         <button class="ql-list" value="bullet"></button>
         <button class="ql-link"></button>
         <button class="ql-image"></button>
-        <button id="playfair-display-btn">Playfair Display</button>
+        <select id="themes" class="ql-header">
+          <option value="standard">Select theme</option>
+          <option value="playfair-display">Playfair Display</option>
+          <option value="roboto">Roboto</option>
+          <option value="noto">Noto</option>
+        </select>
+        <!--         <button id="playfair-display-btn">Playfair Display</button>
         <button id="roboto-btn">Roboto</button>
-        <button id="noto-btn">Noto Serif</button>
+        <button id="noto-btn">Noto Serif</button>  -->
         <button id="save-note-btn" class="save-note-btn">Save</button>
         <button id="print-btn" class="printBtn" onclick="printContent()"><i class="fas fa-print"></i></button>
       </div>
