--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         <div class="close-btn"><button>&times;</button></div>
         <div id="editor">
             <h1>Please add a title here</h1>
-            <p>Here is where you can write your cool note text</p>
+            <p class=>Here is where you can write your cool note text</p>
         </div>
         <section class="bottom-toolbar">
-            <button id="playfair-display-btn" class="dark-blue-btn">Playfair Display</button>
-            <button id="roboto-btn" class="dark-blue-btn">Roboto</button>
-            <button id="noto-btn" class="dark-blue-btn">Noto Serif</button>
+            <button id="academic-btn" class="dark-blue-btn">Academic</button>
+            <button id="playfull-btn" class="dark-blue-btn">Playfull</button>
+            <button id="reset-btn" class="dark-blue-btn">Reset</button>
             <button class="save-note-btn dark-blue-btn">Save</button>
             <button class="printBtn dark-blue-btn" onclick="printContent()"><i class="fas fa-print"></i></button>
         </section>
