--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <button class="ql-list" value="bullet"></button>
         <button class="ql-link"></button>
         <button class="ql-image"></button>
-        <select id="themes" class="ql-header">
+        <select id="themes">
           <option value="standard">Select theme</option>
           <option value="playfair-display">Playfair Display</option>
           <option value="roboto">Roboto</option>
