added 'big size' template

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <button class="ql-list" value="bullet"></button>
         <button class="ql-link"></button>
         <button class="ql-image"></button>
+        <button id="big-size-btn" class="dark-blue-btn">Big size</button>
         <button id="academic-btn" class="dark-blue-btn">Academic</button>
         <button id="playfull-btn" class="dark-blue-btn">Playfull</button>
         <button id="reset-btn" class="dark-blue-btn">Reset</button>
