fixed dark mode

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <option value="green">Green</option>
             <option value="red">Red</option>
             <option value="rainbow">Rainbow</option>
+            <option value="dark">Night mode</option>
             <title>Color-theme</title>
           </select>
         </li>
