just because i can't stop playing with colors

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <li class="nav-icon cogwheel-list-item">
           <select class="nav-button cogwheel-select" id="theme">
             <option value="auto">Auto</option>
-            <option value="green">Green</option>
+            <option value="green">Lime</option>
             <option value="red">Red</option>
             <option value="rainbow">Rainbow</option>
             <option value="dark">Night mode</option>
