added script to top of index with defer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="theme.css">
+  <script src="index.js" defer></script>
 </head>
 
 <body onload="redirectNewUser()">
@@ -135,7 +136,5 @@
 
   </main>
   <script src="confetti.js"></script>
-  <script src="index.js"></script>
 </body>
-
 </html>
