phew final touches

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="logo">Q</div>
       <ul class="nav-list">
         <li class="nav-icon">
-          <button class="nav-button" id="search-button">
+          <button class="nav-button" id="search-button" aria-label="search">
             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search"
               class="svg-inline--fa fa-search fa-w-16" role="img" viewBox="0 0 512 512">
               <title>Search</title>
@@ -36,7 +36,7 @@
           </button>
         </li>
         <li class="nav-icon">
-          <button class="nav-button" id="starred-button">
+          <button class="nav-button" id="starred-button" aria-label="favorite">
             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star"
               class="svg-inline--fa fa-star fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512">
@@ -48,7 +48,7 @@
           </button>
         </li>
         <li class="nav-icon">
-          <button class="nav-button" id="chart-bar-button">
+          <button class="nav-button" id="chart-bar-button" aria-label="statistics">
             <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="chart-bar"
               class="svg-inline--fa fa-chart-bar fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 512 512">
@@ -60,7 +60,7 @@
           </button>
         </li>
         <li class="nav-icon">
-          <button class="nav-button" id="trash-bin-button">
+          <button class="nav-button" id="trash-bin-button" aria-label="deleted">
             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="trash"
               class="svg-inline--fa fa-trash fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512">
