Code review fixed validation

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
             <option value="red">Red</option>
             <option value="rainbow">Rainbow</option>
             <option value="dark">Night mode</option>
-            <title>Color-theme</title>
           </select>
         </li>
       </ul>
@@ -93,7 +92,6 @@
     </section>
 
     <section class="toolbar-and-editor-container hidden">
-      <div class="close-btn"><button>&times;</button></div>
       <div id="toolbar">
         <select class="ql-header">
           <option value="1">Title</option>
@@ -112,6 +110,7 @@
           <option id="academic-btn" value="academic">Academic</option>
           <option id="big-size-btn" value="big-size">Big-size</option>
           <option id="playfull-btn" value="playfull">Playfull</option>
+          <option id="creepy-btn" value="creepy">Creepy</option>
         </select>
         <button id="save-note-btn" class="save-note-btn">Save</button>
         <button id="print-btn" class="printBtn" onclick="printContent()">
@@ -123,6 +122,7 @@
             </path>
           </svg>
         </button>
+        <div class="close-btn"><button>&times;</button></div>
       </div>
       <div id="editor">
         <h1>Please add a title here</h1>
