--- a/intro.html
+++ b/intro.html
@@ -40,7 +40,7 @@
     <main class="main main-on-intro">
         
       <section class="intro">
-        <h1><div class="logo">Q</div>Welcome to Quire</h1>
+        <h1><span class="logo">Q</span>Welcome to Quire</h1>
         <p>
           Quire helps you capture ideeas and find them fast. <br />It is a
           browser based program that let's you save notes directly from your
