added some aria-labels to buttons and commented out redirect to info in order to test page

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           <option value="2">Subtitle</option>
           <option selected>Text</option>
         </select>
-        <button class="ql-bold"></button>
-        <button class="ql-italic"></button>
-        <button class="ql-underline"></button>
-        <button class="ql-list" value="ordered"></button>
-        <button class="ql-list" value="bullet"></button>
-        <button class="ql-link"></button>
-        <button class="ql-image"></button>
+        <button class="ql-bold" aria-label="Bold"></button>
+        <button class="ql-italic" aria-label="Italic"></button>
+        <button class="ql-underline" aria-label="Underline"></button>
+        <button class="ql-list" value="ordered" aria-label="Orderd list"></button>
+        <button class="ql-list" value="bullet" aria-label="Bullet list"></button>
+        <button class="ql-link" aria-label="Add link"></button>
+        <button class="ql-image" aria-label="Attach image"></button>
         <select id="themes">
           <option id="reset-btn" value="reset">Standard</option>
           <option id="academic-btn" value="academic">Academic</option>
@@ -112,7 +112,7 @@
           <option id="playfull-btn" value="playfull">Playfull</option>
           <option id="creepy-btn" value="creepy">Creepy</option>
         </select>
-        <button id="save-note-btn" class="save-note-btn">Save</button>
+        <button id="save-note-btn" class="save-note-btn" aria-label="Save note">Save</button>
         <button id="print-btn" class="printBtn" onclick="printContent()">
           <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="print"
             class="svg-inline--fa fa-print fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
